--- a/RizServerCore/RizServerCoreSharp.csproj
+++ b/RizServerCore/RizServerCoreSharp.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="BaseFiles\**" />
+    <EmbeddedResource Remove="BaseFiles\**" />
+    <None Remove="BaseFiles\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
