服务端基本功能完善与bug修复

--- a/RizServerConsole/RizServerConsole.csproj
+++ b/RizServerConsole/RizServerConsole.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RizServerCore\RizServerCoreSharp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="certs\cert.pfx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
