彻底摆脱System.Security.Cryptography，并且开新坑（精简版BouncyCastle）

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ RizServerConsole/bin/*
 RizServerConsole/obj/*
 RizServerCore/bin/*
 RizServerCore/obj/*
+nanoRizBouncyCastle/bin/*
+nanoRizBouncyCastle/obj/*
