--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,7 @@ nanoRizBouncyCastle/bin/*
 nanoRizBouncyCastle/obj/*
 RizGo/bin/*
 RizGo/obj/*
+RizGoCrypt/bin/*
+RizGoCrypt/obj/*
+RizGoCrypt/Stubs/*
 packages/*
