--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
       # Checks out a copy of your repository on the windows-latest machine
       - name: Checkout repository
         uses: actions/checkout@v2
+        
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.1
 
       # Builds the RizServerConsole project using MSBuild
       - name: Build RizServerConsole project
@@ -71,12 +74,12 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1.8.2
         with:
-          dotnet-version: '5.0.x'
+          dotnet-version: '7.0.x'
 
       # Builds the RizServerConsole project using dotnet command
       - name: Build RizServerConsole project
         run: |
-          dotnet build RizServer.sln --configuration Release --framework net5.0 --output ./buildoutput
+          dotnet build RizServer.sln --configuration Release --framework net7.0 --output ./buildoutput
 
       # Creates a new folder named buildcontent and copies the output files into it
       - name: Create buildcontent folder and copy output files
